mx-tweak (20.08.03) mx; urgency=medium

  * update kde reset script

 -- Dolphin Oracle <dolphin@littlebyte>  Mon, 10 Aug 2020 20:49:03 -0400

mx-tweak (20.08.02) mx; urgency=medium

  * prevent panel changes on first startup of mx-tweak 

 -- Dolphin Oracle <dolphin@littlebyte>  Sat, 08 Aug 2020 21:39:28 -0400

mx-tweak (20.08.01) mx; urgency=medium

  * updated translations 

 -- Dolphin Oracle <dolphin@littlebyte>  Thu, 06 Aug 2020 23:32:49 -0400

mx-tweak (20.07.07) mx; urgency=medium

  * add plasma systray icon adjustment 

 -- Dolphin Oracle <dolphin@littlebyte>  Mon, 20 Jul 2020 21:36:10 -0400

mx-tweak (20.07.06) mx; urgency=medium

  * adjust tray icon 

 -- Dolphin Oracle <dolphin@littlebyte>  Fri, 17 Jul 2020 21:53:28 -0400

mx-tweak (20.07.05) mx; urgency=medium

  * update help files 

 -- Dolphin Oracle <dolphin@littlebyte>  Sat, 11 Jul 2020 22:48:16 -0400

mx-tweak (20.07.04) mx; urgency=medium

  * further adjustment of plasma/kwin restart 

 -- Dolphin Oracle <dolphin@littlebyte>  Sat, 11 Jul 2020 20:19:42 -0400

mx-tweak (20.07.03) mx; urgency=medium

  * fix plasma/kwin restart 

 -- Dolphin Oracle <dolphin@littlebyte>  Sat, 11 Jul 2020 16:15:12 -0400

mx-tweak (20.07.02) mx; urgency=medium

  * plasma tab 

 -- Dolphin Oracle <dolphin@littlebyte>  Sat, 11 Jul 2020 15:40:16 -0400

mx-tweak (20.07.01) mx; urgency=medium

  * fluxbox tab 

 -- Dolphin Oracle <dolphinoracle@gmail.com>  Sat, 04 Jul 2020 16:42:54 -0400

mx-tweak (20.06.01) mx; urgency=medium

  * brightness-systray icon change

 -- Dolphin Oracle <dolphinoracle@gmail.com>  Mon, 08 Jun 2020 19:54:46 -0400

mx-tweak (20.05.02) mx; urgency=medium

  * fix modsetting typo (for swamprabbit) 

 -- Dolphin Oracle <dolphinoracle@gmail.com>  Wed, 27 May 2020 20:28:25 -0400

mx-tweak (20.05.01) mx; urgency=medium

  *  fix type in restore-system-brightness

 -- Dolphin Oracle <dolphinoracle@gmail.com>  Sun, 10 May 2020 14:41:43 -0400

mx-tweak (20.04.02) mx; urgency=medium
